tests/_resources/error_gcns/E005_missing_rhs.expected
error[E005]: Missing right-hand side of equation. Found ';'
  --> E005_missing_rhs.gcn:6:9
     |
   4 |     identities
   5 |     {
   6 |         Y[] = ;
     |         ^ missing right-hand side of equation
   7 |     };
   8 | };
     |
   = note: Add an expression after the '='
   = note: Check if the equation was accidentally truncated
