tests/_resources/error_gcns/E005_missing_rhs.gcn
# Error: Missing right-hand side of equation
block FIRM
{
    identities
    {
        Y[] = ;
    };
};
